Update MainMenu.java